@@ -99,6 +99,8 @@ Release 2.8.0 - UNRELEASED
     HDFS-8791. block ID-based DN storage layout can be very slow for datanode
     on ext4 (Chris Trezzo via kihwal)
 
+    HDFS-9839. Reduce verbosity of processReport logging. (Arpit Agarwal)
+
   OPTIMIZATIONS
 
     HDFS-8856. Make LeaseManager#countPath O(1). (Arpit Agarwal)
